--- a/report/DM.tex
+++ b/report/DM.tex
@@ -54,11 +54,12 @@ The first part deals with images and aims to extract a list of numbers called \e
 
 This part is achieved by the C++ program {\tt invariants.cpp}
 
-\subsection{Pretreatment}
+\subsection{Preprocessing}
 
-The goal here is to reduce noise as much as possible. It can be an issue to estimate perimeter for example. We chose here to use what we have seen in class, e.g. erosion/dilation, 
+The goal here is to reduce noise as much as possible. It can be an issue to estimate perimeter or skeleton for example. We chose here to use what we have seen in class, e.g. erosion/dilation, 
 which can be combined to form closing/opening. A good noise-filter is to combine those once again. With a 3x3 block we retrieve a connex shape (most of the time) but the shape itself is not
-that great (not as smooth as we would want it to be). Yet it erase noise which can be useful for some features.
+that great (not as smooth as we would want it to be). Yet it erase noise which can be useful for some features. It preceeds feature extraction in {\tt invariants.cpp}. \\
+The filecode {\tt preprocessing.cpp} can be used on its own to see some outputs and possibilities (currently designed for opening, closing, opening(closing) and closing(opening)).
 
 \subsection{Handmade features}
 
@@ -69,11 +70,29 @@ Its sole purpose is to be able to differentiate an apple (low coefficient) from 
 It is obviously invariant under translation, rotation, rescaling. Yet it is subject to noise. As said before, pretreatment results in a connex but not smooth image, which increase
  the perimeter and thus this feature.
 
-\subsubsection{Trick 1: size}
+\subsubsection{Skeleton based features}
+
+We thought of different way to characterized shapes. Contours, ``branches'', etc. Since except from few animal classes, shapes don't contain holes, the Freeman code contains all the information on the shape. 
+However, we could not see any ways to characterize it as a feature (except having 1000 features, one with a distance to each other Freeman code of the database, but we would have an issue with dimensionnality in our knn). Furthemore, our preprocessing is not efficient enough.\\
+So we tought of simpler feature, that carries nearly as much information: the skeleton.
+\vspace{1cm}
+This features are based on the skeleton of the shape. To produce it, the algorithm used is an adaptation of Zhang-Suen. However, it is not as fast as we hoped for, so we strongly recommend you not to compute data.csv, since it requires more than half an hour.
+Furthermore, it was harder to use than we expected. We had far more anchor and hinge points than we expected. It might be due to an error in the algorithm though. \\
+
+We extracted three features from the skeleton:
+\begin{itemize}
+ \item Its size, divided by the image size: its goal is not really clear, since it is not obvious that different classes will have different sizes. It is invariant to rescaling and rotation, probably not noise but differences should be negligeable.
+ \item Its number of anchor points: here the idea is to have the number of branches. It is not invariant to rotation/rescaling, but once again differences should be negligeable
+ \item Its number of hinge points (points linked to at least 3 others): it is another measure of the same idea. Same invariancy results
+\end{itemize}
+
+\subsubsection{Trick: size}
 
 This one is a little ``trick''. It doesn't give any information on the object itself but on the image. It is $\frac{area}{size}$. Bells for example cover most of the image
 but bones only a small part. It helps distinguishing them.\\
-This trick is obviously invariant to everything. Noise doens't affect it much.
+This trick is obviously invariant to everything. Noise doesn't affect it much. \\
+It should reach its limits with new images (a bell will still be bigger than a bottle though).
+
 
 \subsection{Image moments}
 The first kind of features we use is called image moments. It is a purely mathematical way to describe the distribution of pixels in an image. The $p,q$ moment of a 2D set of pixels $\Sc$ is defined by:
@@ -156,7 +175,18 @@ Instead of keeping the values of each feature, which leads to concentrated point
 
 With this solution, we obtain more uniformly distributed points, but it breaks the agglomeration of some classes. More suprisingly, adding new invariants has lowered the efficiency of our classifier. Our results with this algorithm (in {\tt classification.py}) were worse than with the previous one, so we stopped using it.
 
-This failure might be due to the Ranking idea, but it could also be a bad choice of the numerous parameters: the number $k$ of neighbors taken into account, the probability given for basic/neighbors/proximity, the choice of features... 
+This failure might be due to the Ranking idea, but it could also be a bad choice of the numerous parameters: the number $k$ of neighbors taken into account, the probability given for basic/neighbors/proximity, the choice of features... Or just that we already reached curse dimensionnality.
+
+
+
+\section{Results and further ideas}
+
+Our program ouputs the good answers around 65\% of the time. When it's proven wrong, it is still nearly always in the top3 or 4. We could not find features relevant enough to break this glass ceiling.
+One possible breakthrough would be to ponderate our features: they don't have the same importance, yet we suppose so in our knn. A neural network working on our feature-vector (one layer, linear just to identify ponderation) would probably break our current score. \\
+Yet we decided to go without it. (and decided not to try ``by hand'' since it would have eventually resulted in a waste of time).
+\vspace{1cm}
+Other features that we thought about was to work with convex hull. For example the proportion of empty cell in it could provide information on its hollowness, thickness, and branches (this proportion would be maximazed for a n-branch star, minimized for a circle).
+We didn't do it for a lack of time, and because our algorithm is already slow enough. We think the skeleton provides more valuable information than the convex hull.
 
 
 \end{document}
